Sala refactor testAsignarAudiencia